@@ -1,3 +1,7 @@
+2016-08-01  Jan Beulich  <jbeulich@suse.com>
+
+	* gcc.dg/vshift-6.c, gcc.dg/vshift-7.c: New.
+
 2016-07-31  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	* gcc.target/powerpc/divkc3-1.c: Require POWER8 hardware.
